# mining

./: .gitignore  DEPLOY_RAILWAY.md  IMPLEMENTATION_PLAN.md  MASTER_TEST_PLAN.md  NSR Caraíba - V.1_open.xlsm  NSR_REQUIREMENTS.md  README.md  USER_STORIES.md  docker-compose.yml  personas.md  strategy.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_region_geo_fields.py  003_add_goal_seek_and_snapshots.py  004_add_block_models_and_features.py
backend/app/: __init__.py  config.py  features.py  main.py
backend/app/api/: audit.py  blocks.py  compute.py  errors.py  export.py  features.py  goal_seek_scenarios.py  health.py  mines.py  prices.py  regions.py  users.py
backend/app/auth/: __init__.py  dependencies.py  feature_guard.py  jwt.py  oauth.py  permissions.py  router.py
backend/app/db/: __init__.py  session.py
backend/app/middleware/: __init__.py  rate_limit.py  security.py
backend/app/models/: __init__.py  block_model.py  goal_seek.py  mine.py  mine_feature.py  region.py  user.py  user_mine.py
backend/app/nsr_engine/: __init__.py  calculations.py  constants.py  goal_seek.py  models.py
backend/app/services/: __init__.py  alert_checker.py  block_import.py  block_nsr.py  email_service.py  metal_prices.py
backend/scripts/: seed_block_snapshots.py  seed_block_snapshots_standalone.py  seed_data.py  seed_snapshots.py
backend/tests/: conftest.py
docs/: domain.md
(+68 files in other folders)
